--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,7 +76,7 @@
 						<p>
 							Walid BELBECHE © 2023
 							<br>
-							Vos données sont chiffrées de bout à bout, aucune exploitation de ces derniers ne sera faites par des tiers.
+							Vos données sont chiffrées de bout à bout, aucune exploitation de ces derniers ne sera faite par des tiers.
 						</p>
 					</div>
 				</footer>
