--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,39 +1,28 @@
-.hero {
-    background-image: url('../../public/img/header.png');
+.hero-header {
+    /* background-image: url('../../public/img/bg.jpg'); */
     background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero-content {
+    background-position: center;
     text-align: center;
     color: #fff;
 }
 
+.hero-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
 .hero-content h1 {
-    font-size: 3em;
-    margin-bottom: 0.5em;
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.hero-content h2 {
+    font-size: 24px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 .hero-content p {
-    font-size: 1.5em;
-    margin-bottom: 1.5em;
-}
-
-.cta-button {
-    background-color: #fff;
-    color: #000;
-    padding: 0.5em 1em;
-    border-radius: 1em;
-    text-decoration: none;
-    font-size: 1.2em;
-    transition: background-color 0.3s ease;
-}
-
-.cta-button:hover {
-    background-color: #000;
-    color: #fff;
+    font-size: 18px;
+    line-height: 1.5;
 }
