--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -58,7 +58,7 @@ body {
   height: 100%;
   min-height: 100%;
   /*background-color: #343a40;*/
-  background-image: url('../../public/img/bg.jpg');
+  background-image: url('../../public/img/bg_old.jpg');
   background-position: center center;
   background-size: calc(100% + 25px);
   background-repeat: repeat;
