--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -28,21 +28,14 @@
 				<div class="col-md-6">
 					<h3>{{ project.title }}</h3>
 					<h6>Créer le</h6>
-					<p>{{ project.createdAt|format_datetime('full', 'short', locale='fr') }}
+					<p>{{ project.createdAt|format_datetime(locale='fr') }}
 						| modifié le
-						{{ project.updatedAt|format_datetime('full', 'short', locale='fr') }}</p>
+						{{ project.updatedAt|format_datetime(locale='fr') }}</p>
 					<img src="{{ asset('/image_project/'~project.image.name) }}" alt="{{ project.image.name }}" class="img-fluid"/>
 
 				</div>
 				<div class="col-md-6">
 					<p class="text-secondary">
-						<h3>Categories :
-						</h3>
-						{% for categorie in project.categories %}
-							<div class="select2">
-								{{ categorie.name }}
-							</div>
-						{% endfor %}
 						<div>
 							<h2>Description
 							</h2>
