--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title "réalisation id" %}
+{% block title %}
+	{{ project.title }}
+{% endblock %}
 
 {% block content %}
 
@@ -18,12 +20,8 @@
 			</ol>
 		</nav>
 	</div>
-
 	<section>
-		<article
-			class="container mt-4 text-center">
-			{# <p>{{ project. }}</p> #}
-			<div class="row">
+		<articleclass="containermt-4text-center">{# <p>{{ project. }}</p> #}<div class="row">
 
 				<div class="col-md-6">
 					<h3>{{ project.title }}</h3>
@@ -31,7 +29,8 @@
 					<p>{{ project.createdAt|format_datetime(locale='fr') }}
 						| modifié le
 						{{ project.updatedAt|format_datetime(locale='fr') }}</p>
-					<img src="{{ asset('/image_project/'~project.image.name) }}" alt="{{ project.image.name }}" class="img-fluid"/>
+					<a href="{{ asset('/image_project/'~project.image.name) }}"><img src="{{ asset('/image_project/'~project.image.name) }}" alt="{{ project.image.name }}" class="img-fluid"/></a>
+
 
 				</div>
 				<div class="col-md-6">
@@ -43,14 +42,11 @@
 					</p>
 				</div>
 			</div>
-
 		</article>
 	</section>
-
 	<script>
 		$(document).ready(function () {
 $('.select2').select2();
 });
 	</script>
-
 {% endblock %}
