--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,10 +1,10 @@
-.img_profil {
+/* .img_profil {
     width: 10%;
-    -ms-flex-align: center;
+    /* -ms-flex-align: center; 
 }
 
 @media only screen and (max-width: 320px) {
     .img_profil {
         width: 100%;
     }
-}
+} */
