--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Site web, Identité numérique, conseils site internet"/>
 		<meta content="Walid BELBECHE" name="author"/>
 		<title>
-			{% block title %}Portfolio - Walid BELBECHE
+			{% block title %}Walid BELBECHE
 			{% endblock %}
 		</title>
 		<!-- Favicon -->
