--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,7 +3,7 @@
     -ms-flex-align: center;
 }
 
-@media only screen and (max-width: 320px) {
+@media (max-width: 576px) {
     .img_profil {
         width: 100%;
     }
