--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -100,6 +100,7 @@
 			{{ encore_entry_script_tags('validator') }}
 			{{ encore_entry_script_tags('main') }}
 			<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+			<script src="{{ asset('js/jquery.shuffle.min.js')}}"></script>
 		{% endblock %}
 	</body>
 </html>
