--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -6,47 +6,136 @@
 
 {% block content %}
 
-	<div class="container">
-		<nav aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item">
-					<a href="{{ url('front_home') }}">Accueil</a>
-				</li>
-				<li class="breadcrumb-item">
-					<a href="{{ url('front_project') }}">Mes réalisations</a>
-				</li>
-				<li class="breadcrumb-item active" aria-current="page">{{ project.title }}
-				</li>
-			</ol>
-		</nav>
-	</div>
-	<section>
-		<articleclass="containermt-4text-center">{# <p>{{ project. }}</p> #}<div class="row">
 
-				<div class="col-md-6">
-					<h3>{{ project.title }}</h3>
-					<h6>Créer le</h6>
-					<p>{{ project.createdAt|format_datetime(locale='fr') }}
-						| modifié le
-						{{ project.updatedAt|format_datetime(locale='fr') }}</p>
-					<a href="{{ asset('/image_project/'~project.image.name) }}"><img src="{{ asset('/image_project/'~project.image.name) }}" alt="{{ project.image.name }}" class="img-fluid"/></a>
-
-
+	<div id="ajax-page" class="ajax-page-content">
+		<div class="ajax-page-wrapper">
+			<div class="ajax-page-nav">
+				<div class="nav-item">
+					<a href="{{ url('front_project_show', {id: project.id - 1})}}">
+						<i class="lnr lnr-chevron-left"></i>
+					</a>
+					<a href="{{ url('front_project_show', {id: project.id + 1})}}">
+						<i class="lnr lnr-chevron-right"></i>
+					</a>
 				</div>
-				<div class="col-md-6">
-					<p class="text-secondary">
-						<div>
-							<h2>Description
-							</h2>
-							{{ project.description|raw }}</div>
-					</p>
+				<div class="nav-item ajax-page-close-button">
+					<a id="ajax-page-close-button" href="{{ url('front_project')}}">
+						<i class="lnr lnr-cross"></i>
+					</a>
 				</div>
 			</div>
-		</article>
-	</section>
-	<script>
-		$(document).ready(function () {
-$('.select2').select2();
+
+			<div class="ajax-page-title">
+				<div class="container">
+					<nav aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">
+								<a href="{{ url('front_home') }}">Accueil</a>
+							</li>
+							<li class="breadcrumb-item">
+								<a href="{{ url('front_project') }}">Mes réalisations</a>
+							</li>
+							<li class="breadcrumb-item active" aria-current="page">{{ project.title }}
+							</li>
+						</ol>
+					</nav>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-8 col-md-8 portfolio-block">
+					<div class="owl-carousel portfolio-page-carousel">
+						{% for image in project.images %}
+							<div class="item">
+								<a href="{{ asset('/image_project/'~image.name) }}"><img src="{{ asset('/image_project/'~image.name) }}" alt="{{ image.name }}"/></a>
+							</div>
+						{% endfor %}
+					</div>
+
+					<script type="text/javascript">
+						jQuery(document).ready(function ($) {
+$('.portfolio-page-carousel').imagesLoaded(function () {
+$('.portfolio-page-carousel').owlCarousel({
+smartSpeed: 1200,
+items: 1,
+loop: true,
+dots: true,
+nav: true,
+navText: false,
+margin: 10,
+autoHeight: true
 });
-	</script>
+});
+});
+					</script>
+				</div>
+
+				<div
+					class="col-sm-4 col-md-4 portfolio-block">
+					<!-- Project Description -->
+					<div class="project-description">
+						<div class="block-title">
+							<h3>Description du projet</h3>
+						</div>
+						<ul class="project-general-info">
+							<li>
+								<p>
+									<i class="fa fa-user"></i>
+									Walid BELBECHE</p>
+							</li>
+							<li>
+								<p>
+									<i class="fa fa-globe"></i>
+									<a href="{{ project.link }}" target="_blank">{{ project.title}}</a>
+								</p>
+							</li>
+							<li>
+								<p>
+									<i class="fa fa-calendar"></i>
+									{{ project.createdAt|format_datetime(locale='fr') }}</p>
+							</li>
+						</ul>
+
+						<p class="text-justify">{{ project.description }}.</p>
+						<!-- /Project Description -->
+
+						<!-- Categories -->
+						<div class="tags-block">
+							<div class="block-title">
+								<h3>Categories</h3>
+							</div>
+							<ul class="tags">
+								{% for category in project.categories %}
+									<li>
+										<a>{{ category.name }}
+										</a>
+									</li>
+								{% endfor %}
+							</ul>
+						</div>
+						<!-- /Categories -->
+
+					<!-- Share Buttons -->
+						{# <div class="btn-group share-buttons">
+																																																																			<div class="block-title">
+																																																																				<h3>Share</h3>
+																																																																			</div>
+																																																																			<a href="#" target="_blank" class="btn">
+																																																																				<i class="fab fa-facebook-f"></i>
+																																																																			</a>
+																																																																			<a href="#" target="_blank" class="btn">
+																																																																				<i class="fab fa-twitter"></i>
+																																																																			</a>
+																																																																			<a href="#" target="_blank" class="btn">
+																																																																				<i class="fab fa-dribbble"></i>
+																																																																			</a>
+																																																																		</div> #}
+						<!-- /Share Buttons -->
+					</div>
+					<!-- Project Description -->
+				</div>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
