--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -31,7 +31,7 @@
 						<!-- Rélisation d'un site d'agence -->
 						<div class="col-md-3 col-xs-12 mb-5 mt-2">
 							<div class="card">
-								<img src="{{ asset('/img/quote/agency.svg') }}" alt="Rélisation de site d'agence"/>
+								<img src="{{ asset('portfolio_wee/public/img/quote/agency.svg') }}" alt="Rélisation de site d'agence"/>
 								<div class="card-body">
 									<h5 class="card-title">Rélisation de site d'agence</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site d'agence, afin de garantir une présence permanente en ligne..</p>
@@ -43,7 +43,7 @@
 						<!-- Réalisation de site d'annonce immobilière -->
 						<div class="col-md-3 col-xs-12 mb-5 mt-2">
 							<div class="card">
-								<img src="{{ asset('/img/quote/real_estate_or_travel.svg') }}" alt="Réalisation de site d'annonce immobilière"/>
+								<img src="{{ asset('portfolio_wee/public/img/quote/real_estate_or_travel.svg') }}" alt="Réalisation de site d'annonce immobilière"/>
 								<div class="card-body">
 									<h5 class="card-title">Réalisation de site d'annonce immobilière</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site d'annonce immobilière ou de voyage, afin de garantir une présence permanente en ligne..</p>
@@ -55,7 +55,7 @@
 						<!-- Rélisation de site eCommerce -->
 						<div class="col-md-3 col-xs-12 mb-5 mt-2">
 							<div class="card">
-								<img src="{{ asset('/img/quote/Ecommerce.svg') }}" alt="Rélisation de site eCommerce"/>
+								<img src="{{ asset('portfolio_wee/public/img/quote/Ecommerce.svg') }}" alt="Rélisation de site eCommerce"/>
 								<div class="card-body">
 									<h5 class="card-title">Rélisation de site eCommerce</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site de boutique en ligne..</p>
@@ -67,7 +67,7 @@
 						<!-- Réalisation de site portfolio -->
 						<div class="col-md-3 col-xs-12 mb-5 mt-2">
 							<div class="card">
-								<img src="{{ asset('/img/quote/portfolio.svg') }}" alt="Réalisation de site portfolio"/>
+								<img src="{{ asset('portfolio_wee/public/img/quote/portfolio.svg') }}" alt="Réalisation de site portfolio"/>
 								<div class="card-body">
 									<h5 class="card-title">Réalisation de site portfolio</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site portfolio, afin de présenter vos meilleure créations et d'acquérir de nouveau client..</p>
