--- a/templates/front/includes/project.html.twig
+++ b/templates/front/includes/project.html.twig
@@ -27,7 +27,7 @@
 
 				<!-- Portfolio Grid -->
 				<div
-					class="portfolio-grid two-columns shuffle">
+					class="portfolio-grid four-columns shuffle">
 
 					<!-- for each item -->
 
