--- a/templates/back/includes/nav.html.twig
+++ b/templates/back/includes/nav.html.twig
@@ -30,7 +30,7 @@
 				</li>
 
 				<li class="menu-item">
-					<a href="#">Voir utilisateur</a>
+					<a href="{{ url('back_user_index')}}">Voir utilisateur</a>
 				</li>
 
 				<li class="menu-item">
