added remove image for the project controller

--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -91,6 +91,7 @@
 			<script src="{{ asset('js/jquery.magnific-popup.min.js') }}"></script>
 			{{ encore_entry_script_tags('validator') }}
 			{{ encore_entry_script_tags('main') }}
+			<script src="{{ asset('js/delete_image.js')}}"></script>
 		{% endblock %}
 	</body>
 </html>
