--- a/templates/front/devis/email.html.twig
+++ b/templates/front/devis/email.html.twig
@@ -1,13 +1,13 @@
 {% block body_text %}
 
 	<!--[if gte mso 9]>
-						<xml>
-						  <o:OfficeDocumentSettings>
-						    <o:AllowPNG/>
-						    <o:PixelsPerInch>96</o:PixelsPerInch>
-						  </o:OfficeDocumentSettings>
-						</xml>
-						<![endif]-->
+							<xml>
+							  <o:OfficeDocumentSettings>
+							    <o:AllowPNG/>
+							    <o:PixelsPerInch>96</o:PixelsPerInch>
+							  </o:OfficeDocumentSettings>
+							</xml>
+							<![endif]-->
 
 	<!--[if IE]><div class="ie-container"><![endif]-->
 	<!--[if mso]><div class="mso-container"><![endif]-->
@@ -183,7 +183,7 @@
 															<div
 																align="center">
 																<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://mjdm.eu/realisations" style="height:37px; v-text-anchor:middle; width:208px;" arcsize="0%"  stroke="f" fillcolor="#fff200"><w:anchorlock/><center style="color:#0075a3;font-family:'Lato',sans-serif;"><![endif]-->
-																<a href="https://mjdm.eu/realisations" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Lato',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #0075a3; background-color: #fff200; border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
+																<a href="https://mjdm.eu/portfolio_wee/public/realisations" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Lato',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #0075a3; background-color: #fff200; border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
 																	<span style="display:block;padding:10px 20px;line-height:120%;">
 																		<strong>
 																			<span style="line-height: 16.8px;">VOIR CE QUE JE PROPOSE
