--- a/templates/back/project/edit.html.twig
+++ b/templates/back/project/edit.html.twig
@@ -11,7 +11,11 @@
 			<h2>Gestion des images</h2>
 			<div>
 				{% for image in project.images %}
-					<a href="{{ asset('/image_project/'~image.name) }}"><img src="{{ asset('/image_project/'~image.name) }}" class="img-fluid" alt="{{ image.name }}"/></a>
+					<a href="{{ asset('image_project/'~image.name) }}"><img src="{{ asset('image_project/'~image.name) }}" class="img-fluid" alt="{{ image.name }}"/></a>
+					<a href="{{ path('back_project_remove_image', {name: image.name})}}" data-delete data-token="{{ csrf_token('delete' ~image.name )}}">
+						<i class="bi bi-file-earmark-x"></i>
+						Supprimer
+					</a>
 				{% endfor %}
 			</div>
 		{% endif %}
