--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -26,11 +26,7 @@
 				</li>
 
 				<li class="menu-item">
-					<a href="{{ url('front_devis_new') }}" class="btn btn-outline-info">Créer devis</a>
-				</li>
-
-				<li class="menu-item">
-					<a href="mailto:wbelbeche.s@gmail.com">Contact</a>
+					<a href="{{ url('front_devis_new') }}">Créer devis</a>
 				</li>
 				{% if is_granted('ROLE_USER') %}
 					<li class="menu-item">
