added jwt login and register + using vue js and vuetify

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -56,6 +56,9 @@
 			<div class="row">
 				<div class="col-12 col-md-6 col-lg-4 mb-5">
 					<div class="card shadow-soft border-light">
+						<div class="card-header p-0">
+							<img src="{{ asset('img/chat-left.svg')}}" class="card-img-top rounded-top" alt="image">
+						</div>
 						<div class="card-body">
 							<h3 class="card-title mt-3">Préparation / communication</h3>
 							<p class="card-text">En comprenant le besoin unique de votre entreprise et de votre marché local, je m'efforce de fournir une solution de développement web et mobile personnalisée qui vous aidera à atteindre vos objectifs spécifiques. Mon service de développement local se concentre sur la création d'une solution sur mesure qui répond à la fois aux exigences de votre entreprise et aux attentes de vos clients.</p>
