--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -15,9 +15,9 @@
 	<!-- Introduction -->
 	<section class="section section-lg pt-6">
 		<div class="container">
-			<div class="row justify-content-center mb-5 mb-md-7">
+			<div class="row justify-content-center mb-5">
 				<div class="col-12 col-md-8 text-center">
-					<h2 class="h1 font-weight-bolder mb-4">Agence web à Nevers</h2>
+					<h2 class="h1 font-weight-bolder mb-4">Développeur indépendant à Nevers(58)</h2>
 					<div
 							class="justify-content-center">
 						<!-- Ajout de la classe d-flex justify-content-center -->
@@ -47,7 +47,7 @@
 
 	<section class="section section-lg">
 		<div class="container-fluid">
-			<div class="row justify-content-center mb-5 mb-md-7">
+			<div class="row justify-content-center mb-5">
 				<div class="col-12 col-md-8 text-center">
 					<h2 class="h1 font-weight-bolder mb-4">Des solutions de développement web adaptées à tous les besoins</h2>
 					<p class="lead">Je conçois la solution optimale de développement web pour chaque situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis pour vos besoins uniques.</p>
