--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -15,9 +15,9 @@
 	<!-- Introduction -->
 	<section class="section section-lg pt-6">
 		<div class="container">
-			<div class="row justify-content-center mb-5">
+			<div class="row justify-content-center">
 				<div class="col-12 col-md-8 text-center">
-					<h2 class="h1 font-weight-bolder mb-4">Développeur indépendant à Nevers(58)</h2>
+					<h2 class="h1 font-weight-bolder mb-4">Développeur indépendant</h2>
 					<div
 							class="justify-content-center">
 						<!-- Ajout de la classe d-flex justify-content-center -->
@@ -27,9 +27,9 @@
 				</div>
 			</div>
 			<hr>
-			<h1 class="cover-heading text-center display-4"></h1>
+			<h1 class="cover-heading text-center display-6"></h1>
 			<p class="lead"></p>
-			<h3 class="mb-5 text-center">Merci pour votre confiance et bonne visite</h3>
+			<h3 class="text-center">Merci pour votre confiance et bonne visite</h3>
 			{% if not app.user %}
 				<p class="lead text-center">
 					<a href="{{ url('front_devis_new')}}" class="btn btn-lg btn-primary">Réaliser ma demande en ligne</a>
@@ -45,11 +45,11 @@
 
 	<!-- Solutions -->
 
-	<section class="section section-lg">
+	<section>
 		<div class="container-fluid">
-			<div class="row justify-content-center mb-5">
+			<div class="row justify-content-center">
 				<div class="col-12 col-md-8 text-center">
-					<h2 class="h1 font-weight-bolder mb-4">Des solutions de développement web adaptées à tous les besoins</h2>
+					<h2 class="h1 font-weight-bolder">Des solutions de développement web adaptées à tous les besoins</h2>
 					<p class="lead">Je conçois la solution optimale de développement web pour chaque situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis pour vos besoins uniques.</p>
 				</div>
 			</div>
